<resources>
    <string name="app_name">WatchersExplorer</string>
    <string name="retry">Retry</string>
    <string name="search_repository">Search repository</string>
    <string name="type_repository_name_hint">Type a repository name please</string>
    <string name="no_repositories_found">No repositories found with this name</string>
    <string name="repository_name_placeholder">Repository name</string>
    <string name="repository_id" translatable="false">repository_id</string>
    <string name="watchers">Watchers:</string>
    <string name="last_update_date">Last update: %1$s</string>
    <string name="clone_url">Clone url: %1$s</string>
    <string name="description">Description</string>
    <string name="repository_name">Repository name</string>
    <string name="api_error">An error occurred: %1$s</string>
</resources>
